Updates in pg_events & Fixed Navbar,Overflow in Events Pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 body {
   background: url("../images/body-bg.jpg");
   color: white;
-  overflow: hidden;
+  overflow-x: hidden;
   width: 100vw;
   height: 100vh;
 }
